Logseq auto save

--- a/journals/2020_11_30.org
+++ b/journals/2020_11_30.org
@@ -1,3 +1,25 @@
 #+TITLE: Nov 30th, 2020
 
-** 
+** - **Growth:**
+    - [[Meditation]] 
+        - 
+    - [[Web Design]] 
+        - 
+    - [[Fitness]]
+        - 100 workout:
+            - PU - 25.
+            - SU - 25.
+            - SQ - 25.
+    - [[Nutrition]]
+        - Coffee - 
+- **Daily Chores:**
+    - Pictures of Sacais/Package to drop off tomorrow
+    - Find Michael computer parts
+    - Post Michael's camera
+    - Put away clothes
+    - Clean dresser top
+- [[Budget]]
+- **Random**
+    - Curate Music playlists
+- **Ideas**
+    - How to maintain accountability on improvement?
