--- a/journals/2020_11_30.org
+++ b/journals/2020_11_30.org
@@ -1,8 +1,8 @@
 #+TITLE: Nov 30th, 2020
 
 ** - **Growth:**
-    - [[Meditation]] 
-        - 
+    - ((Meditation)) 
+        - 10 Min - DONE
     - [[Web Design]] 
         - 
     - [[Fitness]]
